# flowgate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  test_report_phase_1_1_1.md  test_results_phase0.txt
.github/workflows/: ci.yml
.opencode/plans/: 2026-03-01-project-restructure.md
config/examples/: cliproxyapi.yaml  flowgate.yaml  routertool.yaml
docs/: README.md  config-migrate-implementation.md  config-version-migration.md  integration-claude-code-codex.md  performance-baseline-phase0.json  release-and-rollback.md  router-default-model.md  runbook-troubleshooting.md  test-validation-phase0-2026-02-18.md
docs/api/: README.md  cli.md  python-api.md
docs/architecture/: README.md  c4-components-cli.md  c4-containers.md  c4-context.md  c4-deployment.md  c4-dynamic-bootstrap-download.md  c4-dynamic-profile-switch.md  data-flows.md  diagrams.md
docs/archive/: test-validation-phase0-2026-02-18.md
docs/changes/: deprecation-warning-v1.md  task-2-completion-report.md
docs/developer-guide/: README.md  coding-standards.md  config-internals.md  config-version-migration.md  contributing.md  getting-started.md  path-resolution.md  project-structure.md  release-process.md  testing.md
docs/operations/: README.md  backup-restore.md  deployment.md  monitoring.md  upgrade-procedures.md
docs/plans/: 2026-02-16-auth-usability-and-extensibility-implementation-plan.md  2026-02-16-current-plan-and-implementation-status.md  2026-02-17-codex-claude-code-dual-proxy-implementation-plan.md  2026-02-18-optimization-plan.md  2026-02-18-phase-0-preparation.md  phase-1-1-1-completion-report.md  (+24 more)
scripts/: _common.sh  check_dependencies.sh  check_doc_links.py  check_doc_links.sh  cliproxy_auto_update.py  debug_cliproxyapi.sh  doctor.sh  generate_docs.sh  integration_test.sh  security_check.sh  smoke_local.sh  xgate  xtest
tests/: test_absolute_imports.py  test_auth_errors.py  test_base_command.py  test_bootstrap.py  test_cli.py  test_cli_regression_auth.py  test_cli_regression_misc.py  test_cli_regression_service.py  test_client_apply.py  test_cliproxy_debug.py  test_cliproxyapiplus_auto_update.py  test_cliproxyapiplus_release.py  test_cliproxyapiplus_version.py  test_config.py  test_config_errors.py  test_config_factory.py  test_config_migrate.py  test_config_v3.py  test_defaults_sync.py  test_dev_scripts.py  test_docs_integration.py  test_error_handler.py  test_headless_import.py  test_health_enhanced.py  test_integration.py  test_integration_profile_switch.py  test_oauth.py  test_observability.py  test_path_resolver.py  test_precommit_config.py  test_process.py  test_process_errors.py  test_profile.py  test_profile_errors.py  test_security.py  test_validators.py  test_yaml_dependency.py
(+107 files in other folders)
